cmake_minimum_required(VERSION 3.24)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(gym_suit Programmers/gym_suit.cpp)
add_executable(joystick Programmers/joystick.cpp)
add_executable(making_big_numbers Programmers/making_big_numbers.cpp)
add_executable(more_spicy Programmers/more_spicy.cpp)
add_executable(cutting_n_by_n_array Programmers/cutting_n_by_n_array.cpp)
add_executable(english_word_chain Programmers/english_word_chain.cpp)
add_executable(carpet Programmers/carpet.cpp)
add_executable(lifeboat Programmers/lifeboat.cpp)
add_executable(kth_number Programmers/kth_number.cpp)
add_executable(stock_price Programmers/stock_price.cpp)
add_executable(long_jump Programmers/long_jump.cpp)
add_executable(H_index Programmers/H_index.cpp)
add_executable(target_number Programmers/target_number.cpp)
add_executable(feature_development Programmers/feature_development.cpp)
add_executable(network Programmers/network.cpp)
add_executable(clothes Programmers/clothes.cpp)







add_executable(11047 BOJ/11047.cpp)
add_executable(1931 BOJ/1931.cpp)
add_executable(18252 BOJ/18252.cpp)
add_executable(9935 BOJ/9935.cpp)
add_executable(17299 BOJ/17299.cpp)
add_executable(11660 BOJ/11660.cpp)
add_executable(1328 BOJ/1328.cpp)
add_executable(10986 BOJ/10986.cpp)
add_executable(1557 BOJ/1557.cpp)
add_executable(2018 BOJ/2018.cpp)
add_executable(1940 BOJ/1940.cpp)
add_executable(1253 BOJ/1253.cpp)
add_executable(12891 BOJ/12891.cpp)
add_executable(11003 BOJ/11003.cpp)
add_executable(1874 BOJ/1874.cpp)
add_executable(11049 BOJ/11049.cpp)
add_executable(17298 BOJ/17298.cpp)
add_executable(2164 BOJ/2164.cpp)
add_executable(11286 BOJ/11286.cpp)
add_executable(2750 BOJ/2750.cpp)
add_executable(1377 BOJ/1377.cpp)
add_executable(1427 BOJ/1427.cpp)
add_executable(11399 BOJ/11399.cpp)
add_executable(1052 BOJ/1052.cpp)
add_executable(1149 BOJ/1149.cpp)
add_executable(10989 BOJ/10989.cpp)
add_executable(11724 BOJ/11724.cpp)
add_executable(2023 BOJ/2023.cpp)
add_executable(1260 BOJ/1260.cpp)
add_executable(2178 BOJ/2178.cpp)
add_executable(13023 BOJ/13023.cpp)
add_executable(1167 BOJ/1167.cpp)
add_executable(1920 BOJ/1920.cpp)
add_executable(2343 BOJ/2343.cpp)
add_executable(1300 BOJ/1300.cpp)
add_executable(1715 BOJ/1715.cpp)
add_executable(1744 BOJ/1744.cpp)
add_executable(10974 BOJ/10974.cpp)
add_executable(1541 BOJ/1541.cpp)
add_executable(10816 BOJ/10816.cpp)
add_executable(1439 BOJ/1439.cpp)
add_executable(10799 BOJ/10799.cpp)
add_executable(1992 BOJ/1992.cpp)
add_executable(9012 BOJ/9012.cpp)
add_executable(11651 BOJ/11651.cpp)
add_executable(2447 BOJ/2447.cpp)
add_executable(10101 BOJ/10101.cpp)
add_executable(14503 BOJ/14503.cpp)
add_executable(3040 BOJ/3040.cpp)
add_executable(11403 BOJ/11403.cpp)
add_executable(1789 BOJ/1789.cpp)
add_executable(15649 BOJ/15649.cpp)
add_executable(15650 BOJ/15650.cpp)
add_executable(11497 BOJ/11497.cpp)
add_executable(1929 BOJ/1929.cpp)
add_executable(9663 BOJ/9663.cpp)
add_executable(2630 BOJ/2630.cpp)
add_executable(1446 BOJ/1446.cpp)
add_executable(1094 BOJ/1094.cpp)
add_executable(4307 BOJ/4307.cpp)
add_executable(4485 BOJ/4485.cpp)
add_executable(1520 BOJ/1520.cpp)


add_executable(1992_2 resolve/1992_2.cpp)
add_executable(9012_2 resolve/9012_2.cpp)


add_executable(0710_entrance_exam samsung/0710_entrance_exam.cpp)
add_executable(0710_entrance_exam2 samsung/0710_entrance_exam2.cpp)
add_executable(0718_Q1 samsung/0718_Q1.cpp)
add_executable(0718_Q2 samsung/0718_Q2.cpp)
add_executable(0718_Q3 samsung/0718_Q3.cpp)
add_executable(0719_Q4 samsung/0719_Q4.cpp)
add_executable(0719_Q5 samsung/0719_Q5.cpp)
add_executable(0721_Q13 samsung/0721_Q13.cpp)

