cmake_minimum_required(VERSION 3.24)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(gym_suit Programmers/gym_suit.cpp)
add_executable(joystick Programmers/joystick.cpp)
add_executable(making_big_numbers Programmers/making_big_numbers.cpp)
add_executable(more_spicy Programmers/more_spicy.cpp)
add_executable(cutting_n_by_n_array Programmers/cutting_n_by_n_array.cpp)
add_executable(english_word_chain Programmers/english_word_chain.cpp)
add_executable(carpet Programmers/carpet.cpp)
add_executable(lifeboat Programmers/lifeboat.cpp)
add_executable(kth_number Programmers/kth_number.cpp)
add_executable(stock_price Programmers/stock_price.cpp)
add_executable(long_jump Programmers/long_jump.cpp)
add_executable(H_index Programmers/H_index.cpp)
add_executable(target_number Programmers/target_number.cpp)
add_executable(feature_development Programmers/feature_development.cpp)
add_executable(network Programmers/network.cpp)
add_executable(clothes Programmers/clothes.cpp)







add_executable(11047 BOJ/11047.cpp)
add_executable(1931 BOJ/1931.cpp)
add_executable(18252 BOJ/18252.cpp)
add_executable(9935 BOJ/9935.cpp)
add_executable(17299 BOJ/17299.cpp)
add_executable(11660 BOJ/11660.cpp)
add_executable(1328 BOJ/1328.cpp)
add_executable(10986 BOJ/10986.cpp)
add_executable(1557 BOJ/1557.cpp)
add_executable(2018 BOJ/2018.cpp)
add_executable(1940 BOJ/1940.cpp)
add_executable(1253 BOJ/1253.cpp)
add_executable(12891 BOJ/12891.cpp)
add_executable(11003 BOJ/11003.cpp)
add_executable(1874 BOJ/1874.cpp)
add_executable(11049 BOJ/11049.cpp)
add_executable(17298 BOJ/17298.cpp)
add_executable(2164 BOJ/2164.cpp)
add_executable(11286 BOJ/11286.cpp)
add_executable(2750 BOJ/2750.cpp)
add_executable(1377 BOJ/1377.cpp)
add_executable(1427 BOJ/1427.cpp)
add_executable(11399 BOJ/11399.cpp)
add_executable(1052 BOJ/1052.cpp)
add_executable(1149 BOJ/1149.cpp)
add_executable(10989 BOJ/10989.cpp)
add_executable(11724 BOJ/11724.cpp)
add_executable(2023 BOJ/2023.cpp)
add_executable(1260 BOJ/1260.cpp)
add_executable(2178 BOJ/2178.cpp)
add_executable(13023 BOJ/13023.cpp)
add_executable(1167 BOJ/1167.cpp)
add_executable(1920 BOJ/1920.cpp)
add_executable(2343 BOJ/2343.cpp)
add_executable(1300 BOJ/1300.cpp)
add_executable(1715 BOJ/1715.cpp)
add_executable(1744 BOJ/1744.cpp)
add_executable(10974 BOJ/10974.cpp)
add_executable(1541 BOJ/1541.cpp)
add_executable(10816 BOJ/10816.cpp)
add_executable(1439 BOJ/1439.cpp)
add_executable(10799 BOJ/10799.cpp)
add_executable(1992 BOJ/1992.cpp)
add_executable(9012 BOJ/9012.cpp)
add_executable(11651 BOJ/11651.cpp)
add_executable(2447 BOJ/2447.cpp)
add_executable(10101 BOJ/10101.cpp)
add_executable(14503 BOJ/14503.cpp)
add_executable(3040 BOJ/3040.cpp)
add_executable(11403 BOJ/11403.cpp)
add_executable(1789 BOJ/1789.cpp)
add_executable(15649 BOJ/15649.cpp)
add_executable(15650 BOJ/15650.cpp)
add_executable(11497 BOJ/11497.cpp)
add_executable(1929 BOJ/1929.cpp)
add_executable(9663 BOJ/9663.cpp)
add_executable(2630 BOJ/2630.cpp)
add_executable(1446 BOJ/1446.cpp)
add_executable(1094 BOJ/1094.cpp)
add_executable(4307 BOJ/4307.cpp)
add_executable(4485 BOJ/4485.cpp)
add_executable(1520 BOJ/1520.cpp)
add_executable(9084 BOJ/9084.cpp)
add_executable(11758 BOJ/11758.cpp)
add_executable(1991 BOJ/1991.cpp)
add_executable(17779 BOJ/17779.cpp)
add_executable(11053 BOJ/11053.cpp)
add_executable(13869 BOJ/13869.cpp)
add_executable(9251 BOJ/9251.cpp)
add_executable(1766 BOJ/1766.cpp)
add_executable(11725 BOJ/11725.cpp)
add_executable(10845 BOJ/10845.cpp)
add_executable(1004 BOJ/1004.cpp)
add_executable(1337 BOJ/1337.cpp)
add_executable(7490 BOJ/7490.cpp)
add_executable(4256 BOJ/4256.cpp)
add_executable(1340 BOJ/1340.cpp)
add_executable(2022 BOJ/2022.cpp)
add_executable(1158 BOJ/1158.cpp)
add_executable(1389 BOJ/1389.cpp)
add_executable(17140 BOJ/17140.cpp)
add_executable(1316 BOJ/1316.cpp)
add_executable(10815 BOJ/10815.cpp)
add_executable(17266 BOJ/17266.cpp)
add_executable(7795 BOJ/7795.cpp)
add_executable(11054 BOJ/11054.cpp)
add_executable(8958 BOJ/8958.cpp)
add_executable(7576 BOJ/7576.cpp)
add_executable(1912 BOJ/1912.cpp)
add_executable(9020 BOJ/9020.cpp)
add_executable(16236 BOJ/16236.cpp)
add_executable(13565 BOJ/13565.cpp)
add_executable(9095 BOJ/9095.cpp)
add_executable(15686 BOJ/15686.cpp)
add_executable(2437 BOJ/2437.cpp)
add_executable(25644 BOJ/25644.cpp)
add_executable(2170 BOJ/2170.cpp)
add_executable(17070 BOJ/17070.cpp)
add_executable(1074 BOJ/1074.cpp)
add_executable(2309 BOJ/2309.cpp)
add_executable(10808 BOJ/10808.cpp)
add_executable(2979 BOJ/2979.cpp)
add_executable(10988 BOJ/10988.cpp)
add_executable(1159 BOJ/1159.cpp)
add_executable(11655 BOJ/11655.cpp)
add_executable(1463 BOJ/1463.cpp)
add_executable(9996 BOJ/9996.cpp)
add_executable(2559 BOJ/2559.cpp)
add_executable(1620 BOJ/1620.cpp)
add_executable(1194 BOJ/1194.cpp)
add_executable(9375 BOJ/9375.cpp)
add_executable(1213 BOJ/1213.cpp)
add_executable(3986 BOJ/3986.cpp)
add_executable(1629 BOJ/1629.cpp)
add_executable(4375 BOJ/4375.cpp)
add_executable(1012 BOJ/1012.cpp)
add_executable(2468 BOJ/2468.cpp)
add_executable(2583 BOJ/2583.cpp)
add_executable(2828 BOJ/2828.cpp)
add_executable(2910 BOJ/2910.cpp)
add_executable(4659 BOJ/4659.cpp)
add_executable(2870 BOJ/2870.cpp)
add_executable(2636 BOJ/2636.cpp)
add_executable(10709 BOJ/10709.cpp)
add_executable(3474 BOJ/3474.cpp)
add_executable(2852 BOJ/2852.cpp)
add_executable(1436 BOJ/1436.cpp)
add_executable(4949 BOJ/4949.cpp)
add_executable(14502 BOJ/14502.cpp)




add_executable(temp Test/temp.cpp)
add_executable(QuickSort BOJ/QuickSort.cpp)

add_executable(1992_2 resolve/1992_2.cpp)
add_executable(9012_2 resolve/9012_2.cpp)


add_executable(0710_entrance_exam samsung/0710_entrance_exam.cpp)
add_executable(0710_entrance_exam2 samsung/0710_entrance_exam2.cpp)
add_executable(0718_Q1 samsung/0718_Q1.cpp)
add_executable(0718_Q2 samsung/0718_Q2.cpp)
add_executable(0718_Q3 samsung/0718_Q3.cpp)
add_executable(0719_Q4 samsung/0719_Q4.cpp)
add_executable(0719_Q5 samsung/0719_Q5.cpp)
add_executable(0721_Q13 samsung/0721_Q13.cpp)

add_executable(test test.cpp)